# NKU-Campus-Fraud-Alert

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_debt.md
.github/workflows/: ci.yml  commitlint.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.runtime/uploads/evidence/case/182304774639718400/: 182304775684100096.enc  182306334354575360.enc
backend/.runtime/uploads/evidence/case/182312977041592320/: 182312977389719552.enc
backend/.runtime/uploads/evidence/draft/182303726994853888/: 182303726994853889.enc
backend/.runtime/uploads/evidence/draft/182304281003692032/: 182304281028857856.enc
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260301_gds_initial_foundation.py  20260302_yxq_reports_and_drafts.py  20260518_gzh_review_workflow_and_alerts.py  20260524_tsy_add_quiz_publish_level.py  20260601_lht_warnings_and_knowledge.py  20260605_lht_split_reviewer_kb_perms.py  20260610_tsy_quiz_and_notifications_api.py
backend/app/: __init__.py  exceptions.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  middleware.py  response_headers.py
backend/app/api/v1/: __init__.py  _examples.py  admin_knowledge.py  admin_quiz.py  admin_reports.py  admin_warnings.py  audit.py  auth.py  departments.py  drafts.py  fraud_types.py  judicial.py  knowledge.py  notifications.py  quiz.py  reports.py  users.py  warnings.py
backend/app/core/: __init__.py  config.py  ids.py  kms.py  logging.py  security.py  snowflake.py
backend/app/domain/: __init__.py  user_snapshot.py
backend/app/infra/: __init__.py
backend/app/infra/cache/: __init__.py  audit_stream.py  client.py  rbac_cache.py  session_store.py  ticket_dedup.py
backend/app/infra/cas/: __init__.py  base.py  factory.py  mock.py  real.py
backend/app/infra/db/: __init__.py  base.py  demo_seed.py  seed.py  session.py  types.py
backend/app/infra/db/models/: __init__.py  aggregate_alert_log.py  anonymous_decrypt_log.py  anonymous_mapping.py  audit_log.py  case_anonymous_reporter.py  case_status_history.py  department.py  evidence_file.py  fraud_case.py  fraud_type.py  knowledge_draft.py  knowledge_entry.py  knowledge_entry_history.py  notification.py  permission.py  question_bank.py  quiz.py  quiz_attempt.py  quiz_attempt_answer.py  quiz_question.py  report_draft.py  role.py  role_permission.py  session.py  system_config.py  user.py  warning_notice.py  warning_target.py
backend/app/infra/repositories/: __init__.py  anonymous.py  audit.py  knowledge.py  notification.py  permission.py  quiz.py  report.py  role.py  user.py  warning.py
backend/app/schemas/: __init__.py  audit.py  auth.py  common.py  judicial.py  knowledge.py  notifications.py  quiz.py  reports.py  state.py  users.py  warnings.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  judicial_service.py  knowledge_entry_service.py  knowledge_service.py  notification_service.py  permissions.py  quiz_service.py  report_service.py  review_service.py  state_machine.py  storage_service.py  user_service.py  warning_service.py
backend/app/tasks/: __init__.py  aggregate_alert.py  draft_cleanup.py  quiz_reminder.py
backend/scripts/: __init__.py  replay_audit.py  reset_db.py  smoke_uc04_uc08.py  verify_audit_chain.py
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/e2e/: test_smoke.py
backend/tests/integration/: test_admin_reports.py  test_audit_decorator.py  test_knowledge.py  test_login_flow.py  test_reports.py  test_user_management.py  test_warnings.py
backend/tests/unit/: test_aggregate_alert.py  test_audit_chain.py  test_cas_provider.py  test_cors_download_headers.py  test_knowledge_state_machine.py  test_quiz_exports.py  test_rbac_deps.py  test_response_headers.py  test_security.py  test_state_machine.py  test_storage_service.py  test_warning_state.py
docs/: api-guide.md  architecture.md  contracts.md  conventions.md  demo-feature-checklist.md  demo-runbook-detailed.md  error-codes.md  getting-started.md  permissions.md  risks.md
docs/adr/: 001-fastapi.md  002-rbac-self-built.md  003-no-graphql.md  004-audit-append-only.md  005-async-default.md  006-mock-cas.md  007-id-strategy.md  008-monorepo.md  README.md
frontend/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  debug-page.mjs  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  shoot.mjs  stylelint.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: audit.ts  auth.ts  departments.ts  http.ts  judicial.ts  knowledge.ts  notifications.ts  quiz.ts  reports.ts  users.ts  warnings.ts
frontend/src/components/: AppActivityItem.vue  AppButton.vue  AppCard.vue  AppEmpty.vue  AppErrorState.vue  AppIcon.vue  AppInput.vue  AppModal.vue  AppNotificationBell.vue  AppPageHeader.vue  (+7 more)
infra/: .env.example
infra/monitoring/: prometheus.yml
infra/nginx/: nginx.conf  proxy-common.conf
(+60 files in other folders)
