[project]
name = "anti-fraud-backend"
version = "0.1.0"
description = "Anti-Fraud Platform · backend (FastAPI)"
authors = [{ name = "Anti-Fraud Team" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "gunicorn>=22.0,<24.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.9",  # 表单 / 文件上传
    "starlette>=0.37",

    # 数据校验 / 配置
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "email-validator>=2.1,<3.0",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "aiomysql>=0.2.0,<1.0",
    "alembic>=1.13,<2.0",
    "pymysql>=1.1,<2.0",  # alembic 同步迁移用

    # Redis
    "redis>=5.0,<6.0",

    # 安全 / 加密
    "cryptography>=46.0.7,<47.0",
    "passlib>=1.7,<2.0",
    "itsdangerous>=2.2,<3.0",

    # 日志 / 可观测性
    "structlog>=24.1,<26.0",
    "prometheus-client>=0.20,<1.0",

    # CAS
    "lxml>=6.1,<7.0",  # 解析 CAS XML
    "defusedxml>=0.7,<1.0",  # 防 XXE

    # 工具
    "orjson>=3.10,<4.0",
    "python-dateutil>=2.9,<3.0",
    "pytz>=2024.1",

    # 对象存储
    "boto3>=1.34,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-xdist>=3.5,<4.0",
    "factory-boy>=3.3,<4.0",
    "fakeredis>=2.23,<3.0",
    "freezegun>=1.5,<2.0",
    "respx>=0.21,<1.0",
    "anyio>=4.4,<5.0",
    "aiosqlite>=0.20,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<1.0",
    "black>=26.3.1,<27.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "ipython>=8.24,<9.0",
    "types-pytz",
    "types-python-dateutil",
    "types-requests",
    # uv 0.4 treats only the `dev` dependency group specially in Docker builds;
    # keep test tools here too so `docker compose exec backend pytest` works.
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-xdist>=3.5,<4.0",
    "factory-boy>=3.3,<4.0",
    "fakeredis>=2.23,<3.0",
    "freezegun>=1.5,<2.0",
    "respx>=0.21,<1.0",
    "anyio>=4.4,<5.0",
    "aiosqlite>=0.20,<1.0",
]
test = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-xdist>=3.5,<4.0",
    "factory-boy>=3.3,<4.0",
    "fakeredis>=2.23,<3.0",
    "freezegun>=1.5,<2.0",
    "respx>=0.21,<1.0",
    "anyio>=4.4,<5.0",
    # SQLite async driver — 单元/集成测试用 in-memory 跑，避免依赖真 MySQL
    "aiosqlite>=0.20,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── 工具配置 ────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", ".venv", ".venv-test", "build", "dist"]

[tool.ruff.lint]
# E,W,F - pycodestyle / pyflakes  | I - isort  | B - bugbear
# C4 - comprehensions             | SIM - simplify
# UP - pyupgrade                  | ASYNC - async best-practice
# S - bandit                      | ANN - annotations
# RUF - ruff-specific
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP", "ASYNC", "S", "ANN", "RUF", "C901"]
ignore = [
    "E501",   # line-length 由 Black 处理
    "ANN401", # Any 偶尔可接受（必须带原因注释）
    "S101",   # tests 用 assert
    "B008",   # FastAPI Depends() 在默认参数里用
    # 项目以中文注释/字符串为主，全角标点（“”，；：等）属于刻意为之
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S", "D"]
"alembic/**" = ["ANN", "F401"]
"scripts/**" = ["S", "T201"]
# SQLAlchemy `__table_args__ = {...}` 是声明式语法标准用法，按 ClassVar 改写既不优雅
# 也容易破坏 mypy 推断，整个 models 包统一忽略 RUF012。
"app/infra/db/models/**" = ["RUF012"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "alembic/versions"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "tests/"]

[[tool.mypy.overrides]]
module = ["lxml.*", "defusedxml.*", "factory.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: unit-level (fast, no IO)",
    "integration: integration tests requiring DB/Redis",
    "e2e: end-to-end smoke tests",
    "slow: slow tests (excluded by default)",
]
filterwarnings = ["error", "ignore::DeprecationWarning:passlib.*"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "alembic/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# 项目级最终目标 80%，关键模块 95%（详见 docs/conventions.md "测试")。
# 地基阶段（仅 auth/audit/users CRUD 实现）先 60%，随各 UC 模块 PR 进来递增。
fail_under = 60
show_missing = true
skip_covered = false
